syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "OrderProto";

package order;

service OrderService {
  rpc GetOrderPage (OrderRequestPage) returns (OrderReplyPage) {}
  rpc SearchOrder (OrderSearch) returns (OrderList) {}
  rpc GetById (OrderId) returns (Order) {}
  rpc AddOrder (Order) returns (OrderId) {}
  rpc UpdateOrder(Order) returns (OrderReply) {}
  rpc DeleteOrder (OrderId) returns (OrderReply) {}
}

message OrderRequestPage {
  uint64 page_size = 1;
  uint64 page = 2;
}

message OrderReply {bool success = 1;}

message OrderSearch {
  string id = 1;
  string software_id = 2;
  string customer_id = 3;
  string instrument_id = 4;
  string express_number = 5;
  string instrument_number = 6;
  string begin_time = 7;
  string end_time = 8;
}

message OrderId {
  string id = 1;
}

message Order {
  string id = 1;
  string software_id = 2;
  string customer_id = 3;
  string instrument_id = 4;
  string express_number = 5;
  string express_company = 6;
  string instrument_number = 7;
  string instrument_time = 8;
  string attachment = 9;
  string remarks = 10;
  string create_time = 11;
  string create_by = 12;
}

message OrderList {repeated Order list = 1;}

message OrderReplyPage {
  repeated Order list = 1;
  uint64 total = 2;
}